cabal-version: 3.0
name: tvar-counter-iosim
version: 0.1.0.0
license: NONE
build-type: Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options: -Wall

test-suite tvar-counter-iosim-test
  import: warnings
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
    QuickCheck,
    base ^>=4.18.2.1,
    io-classes:{io-classes, strict-stm},
    io-sim,
    tasty,
    tasty-quickcheck,
